# SumoTracker

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: database-rules.mdc  python-rules.mdc
src/sumo_tracker/: daily_update.py  initial_data_dump.py  main.py  query_matches.py  test_scrape.py
src/sumo_tracker/models/: __init__.py  match.py
src/sumo_tracker/scrapers/: match_scraper.py
